# simple-line-notice

./: Cargo.toml  Dockerfile  README.md  renovate.json5
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  test.yml
src/: main.rs
