[package]
name = "simple-line-notice"
version = "0.1.2"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", default-features = false, features = [
    "http2",
    "tokio",
] }
reqwest = { version = "0.12.23", features = ["rustls-tls", "json"] }
tokio = { version = "1.47.1", features = ["net", "macros"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.123"

[profile.release]
strip = true
